syntax = "proto3";

package com.academy.fintech.application;

option java_multiple_files = true;

service ApplicationService{
  rpc Create(CreateRequest) returns (CreateResponse) {}
  rpc Remove(CancelRequest) returns (CancelResponse) {}
}

message CreateRequest{
  string firstName = 1;
  string lastName = 2;
  string email = 3;
  int32 salary = 4;
  int32 disbursementAmount = 5;
}

message CreateResponse{
  string applicationId = 1;
}

message CancelRequest {
  string applicationId = 1;
}

message CancelResponse {
  bool success = 1;
}
